--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,6 +21,7 @@ jobs:
   
   security-checks:
     runs-on: ubuntu-latest
+    needs: compile
 
     steps:
     - uses: actions/checkout@v4
@@ -40,7 +41,7 @@ jobs:
       run: sudo apt install gitleaks -y
 
     - name: Gitleask Code Scan 
-      run: gileaks detect source . -r gitleaks-repoet.json -f
+      run: gitleaks detect source . -r gitleaks-repoet.json -f
 
 
 
