--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,4 +44,19 @@ jobs:
       run: gitleaks detect source . -r gitleaks-repoet.json -f json
 
 
+  test1:
+    runs-on: self-hosted
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Unit Test Cases
+      run: mvn test
+
+
 
